--- a/bai2.html
+++ b/bai2.html
@@ -1,20 +1,22 @@
-function str_limit(str,limit=10) {
-    //xoa tag html
-    str = str.replace(/<[^>]*>/g,"");
-    // Xoa ky tu trang dau va cuoi
-    str = str.trim();
-    // tim kiem 2 khoang trang
-    str = str.replace(/\s+/g," ");
-    //chuyen chuoi thanh in hoa
-    str = str.toLowerCase();
-    //chuyen ky tu dau thanh hoa
-    const mang = str.split(" ");
-    const mangmoi =mang.slice(0,limit);
-    str = mangmoi.join(" ");
-    return str; 
-}
-let str = "<a> Lunar New Year Festival often falls between late January and early February; it is among the most important holidays in Vietnam. Officially, the festival includes the 1st, 2nd, and 3rd day in Lunar Calendar; however, Vietnamese people often spend nearly a month celebrating this special event. Tet Holiday gets its beginning marked with the first day in the Lunar Year; however, its preparation starts long before that. ";
-console.log(str.length);
-
-str = removeSpace(str);
-console.log(str.length);
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Quản Lý Môn Học</title>
+<link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+<body>
+<h2>Danh Sách Môn Học</h2>
+<ul id="subjectList">
+    <!-- Danh sách môn học sẽ được hiển thị ở đây -->
+</ul>
+<h2>Thêm Môn Học</h2>
+<form id="addSubjectForm">
+    <label for="subjectName">Tên Môn Học:</label>
+    <input type="text" id="subjectName" name="subjectName" required>
+    <button type="submit">Thêm</button>
+</form>
+<script src="bai2.js"></script>
+</body>
+</html>
